fixed nav alignment issue

--- a/demo/themes/default/default.less
+++ b/demo/themes/default/default.less
@@ -7,13 +7,16 @@
 		img{
 			border: 0;
 		}
+		&> a{
+			line-height: 0px;
+		}
 		
 		//BULLETS
 		#bullets{
 			height: 10px;
 			position: absolute;
-			bottom: 10px;
-			right: 10px;
+			bottom: 8px;
+			right: 5px;
 			z-index: 10;
 			
 			.bullet{
@@ -38,6 +41,7 @@
 		#slider-nav{
 			position: absolute;
 			width: 100%;
+			height: 52px;
 			top: 50%;
 			margin-top: -26px;
 			display: none;
@@ -48,7 +52,7 @@
 				width: 33px;
 				height: 52px;
 				background-image: @arrows;
-				left: 30px;
+				left: 5%;
 				z-index: 100;
 				cursor: pointer;
 			}
@@ -58,7 +62,7 @@
 				height: 52px;
 				background-image: @arrows;
 				background-position: right top;
-				right: 30px;
+				right: 5%;
 				z-index: 100;
 				cursor: pointer;
 			}
